# fast-zero

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 14642c1cc7ec_create_todos_table.py  c7dd571ee59a_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
